<resources>
    <string name="app_name">Picks Hunter</string>
    <string name="action_settings">Settings</string>
    <string name="login_using_email_and_password">Login using email and password</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password ?</string>
    <string name="or_login_using_social_network">Or login using social network</string>
    <string name="facebook">Facebook</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="egypt_20">Egypt (+20)</string>
    <string name="mobile_number">Mobile number</string>
    <string name="continue_text">Continue</string>
    <string name="verifying_mobile_number">Verifying Mobile Number</string>
    <string name="get_started">Get Started</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="mobile_number_verified">Mobile Number Verified</string>
    <string name="use_picks_hunter_as">Use Picks hunter as</string>
    <string name="tell_us_who_you_are">Tell us who you are</string>
    <string name="hunter">Hunter</string>
    <string name="customer">Customer</string>
    <string name="pick_your_interests">Pick your interests</string>
    <string name="display_items_for">Display items for</string>
    <string name="men">Men</string>
    <string name="women">Women</string>
    <string name="kids">Kids</string>
    <string name="brands">Brands</string>
    <string name="categories">Categories</string>
    <string name="start_picking">Start Picking</string>
    <string name="please_enter_password">Please Enter Password</string>
    <string name="please_enter_valid_email">Please Enter Valid Email</string>
    <string name="please_enter_valid_name">Please Enter Valid Name</string>
    <string name="please_enter_valid_mobile_number">Please Enter Valid Mobile Number</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_to_pickshunter">Welcome to\nPicksHunter</string>
    <string name="plan_your_upcoming_trip_and_start_adding_products_to_your_profile">Plan your upcoming trip and start adding products to your profile</string>
    <string name="get_ready_for_trip">Get ready for your trip to</string>
    <string name="plan_your_trip">Plan Your Trip</string>
    <string name="trip_details">Trip details</string>
    <string name="go_trip_details">Go To Trip details</string>
    <string name="from">From</string>
    <string name="country_city">Country, City</string>
    <string name="to">To</string>
    <string name="dates">Dates</string>
    <string name="start_date">Start date</string>
    <string name="end_date">End date</string>
    <string name="i_agree_to_the">I agree to the</string>
    <string name="terms_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="add_trip">ADD TRIP</string>
    <string name="trip_stores">Trip stores</string>
    <string name="check_in_a_new_store">Check in a new store</string>
    <string name="store_name">Store Name</string>
    <string name="checked_in_stores">Checked in stores</string>
    <string name="checkout">Checkout</string>
    <string name="new_product">New Product</string>
    <string name="product_title">Product title</string>
    <string name="write_a_description">Write a description</string>
    <string name="store">Store</string>
    <string name="change">Change</string>
    <string name="search">Search</string>
    <string name="add_product">Add Product</string>
    <string name="choose_category">Choose Category</string>
    <string name="store_price">Store Price</string>
    <string name="sale">Sale</string>
    <string name="earning_approach">Earning Approach</string>
    <string name="net_comission">Net Comission</string>
    <string name="fixed_amount">Fixed amount</string>
    <string name="value">Value</string>
    <string name="vat">VAT</string>
    <string name="app_comission">App comission</string>
    <string name="total_price">Total price</string>
    <string name="total_price_egp">Total price EGP</string>
    <string name="post_product">POST PRODUCT</string>
    <string name="home">Home</string>
    <string name="post">Post</string>
    <string name="add_a_comment">Add a comment</string>
    <string name="delivery_address">Delivery Address</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="requests_txt">Requests</string>
    <string name="request_approve">Approve</string>
    <string name="request_reject">Reject</string>
</resources>
