<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.AddTripFragment" >

    <ImageView
        android:id="@+id/iv_arrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_arrow_back"
        android:layout_marginTop="@dimen/_28sdp"
        android:layout_marginStart="@dimen/_14sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/plan_your_trip"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginStart="@dimen/_6sdp"
        android:textColor="@color/colorBlue1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@+id/iv_arrow"
        android:textSize="@dimen/_24sdp"/>


    <TextView
        android:id="@+id/tv_trip_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/trip_details"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginStart="@dimen/_14sdp"
        android:textColor="@color/colorOrange"
        app:layout_constraintTop_toBottomOf="@+id/iv_arrow"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="@dimen/_16sdp"/>


    <TextView
        android:id="@+id/tv_from"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/from"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginStart="@dimen/_14sdp"
        android:textColor="@color/colorBlue1"
        app:layout_constraintTop_toBottomOf="@+id/tv_trip_details"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="@dimen/_14sdp"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_from"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/country_city"
        android:focusable="false"
        app:layout_constraintTop_toBottomOf="@+id/tv_from"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="@dimen/_14sdp"
        android:layout_marginEnd="@dimen/_14sdp"
        android:layout_marginTop="@dimen/_3sdp" />

    <TextView
        android:id="@+id/tv_to"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/to"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginStart="@dimen/_14sdp"
        android:textColor="@color/colorBlue1"
        app:layout_constraintTop_toBottomOf="@+id/et_from"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="@dimen/_14sdp"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_to"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/country_city"
        android:focusable="false"
        app:layout_constraintTop_toBottomOf="@+id/tv_to"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="@dimen/_14sdp"
        android:layout_marginEnd="@dimen/_14sdp"
        android:layout_marginTop="@dimen/_3sdp" />

    <TextView
        android:id="@+id/tv_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dates"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginStart="@dimen/_14sdp"
        android:textColor="@color/colorOrange"
        app:layout_constraintTop_toBottomOf="@+id/et_to"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="@dimen/_14sdp"/>

    <LinearLayout
        android:id="@+id/ll_dates"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        app:layout_constraintTop_toBottomOf="@+id/tv_date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="@dimen/_14sdp"
        android:layout_marginEnd="@dimen/_14sdp"
        android:layout_marginTop="@dimen/_3sdp" >

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_start_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:hint="@string/start_date"
            android:drawableEnd="@drawable/ic_calender"
            android:layout_weight="1"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_end_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:drawableEnd="@drawable/ic_calender"
            android:hint="@string/end_date"
            android:layout_weight="1"/>

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/cb_terms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/i_agree_to_the"
        android:textColor="@color/colorGray2"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintTop_toBottomOf="@+id/ll_dates"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="@dimen/_14sdp"
        android:layout_marginEnd="@dimen/_14sdp"
        android:layout_marginTop="@dimen/_28sdp" />

    <TextView
        android:id="@+id/tv_termsandconditions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_4sdp"
        android:text="@string/terms_conditions"
        android:textColor="@color/colorBlue1"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintBottom_toBottomOf="@+id/cb_terms"
        app:layout_constraintStart_toEndOf="@+id/cb_terms"
        app:layout_constraintTop_toTopOf="@+id/cb_terms" />

    <Button
        android:id="@+id/bt_add_trip"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/add_trip"
        android:backgroundTint="@color/colorBlue1"
        android:background="@drawable/shap_btn"
        android:textColor="@color/colorWhite"
        android:layout_marginTop="@dimen/_26sdp"
        app:layout_constraintStart_toStartOf="@id/cb_terms"
        app:layout_constraintEnd_toEndOf="@+id/ll_dates"
        app:layout_constraintTop_toBottomOf="@+id/cb_terms"
        android:enabled="false"
        android:alpha="5"/>

</androidx.constraintlayout.widget.ConstraintLayout>