<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context=".activity.SignUpMobileActivity" >

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/loginlogo"/>


    <ImageView
        android:id="@+id/iv_circle_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/logincirclesup"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/iv_circle_1"
        android:textSize="@dimen/_28ssp"
        android:textColor="@color/colorWhite"
        android:layout_marginBottom="@dimen/_40sdp"
        android:layout_marginStart="@dimen/_33sdp"/>

    <TextView
        android:id="@+id/tv_egypt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/egypt_20"
        android:textColor="@color/colorGray"
        android:textSize="@dimen/_18ssp"
        android:layout_marginTop="@dimen/_20sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="@dimen/_33sdp"
        android:layout_marginEnd="@dimen/_33sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:id="@+id/et_mobile_number"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/mobile_number"
        android:layout_marginTop="@dimen/_8sdp"
        android:background="@drawable/shape_edit_text"
        android:padding="@dimen/_10sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="@dimen/_33sdp"
        android:layout_marginEnd="@dimen/_33sdp"
        app:layout_constraintTop_toBottomOf="@+id/tv_egypt"/>

    <Button
        android:id="@+id/bt_sign_up"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/continue_text"
        android:backgroundTint="@color/colorBlue1"
        android:background="@drawable/shap_btn"
        android:textColor="@color/colorWhite"
        android:layout_marginTop="@dimen/_16sdp"
        app:layout_constraintStart_toStartOf="@id/et_mobile_number"
        app:layout_constraintEnd_toEndOf="@+id/et_mobile_number"
        app:layout_constraintTop_toBottomOf="@+id/et_mobile_number"/>

    <TextView
        android:id="@+id/already_have_an_account"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/already_have_an_account"
        android:textColor="@color/colorGray1"
        android:textSize="@dimen/_12ssp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginStart="@dimen/_33sdp"
        android:layout_marginEnd="@dimen/_33sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_sign_up"/>

    <TextView
        android:id="@+id/tv_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textColor="@color/colorBlue1"
        android:textSize="@dimen/_12ssp"
        android:layout_marginStart="@dimen/_5sdp"
        android:layout_marginEnd="@dimen/_33sdp"
        app:layout_constraintStart_toEndOf="@+id/already_have_an_account"
        app:layout_constraintTop_toTopOf="@+id/already_have_an_account"/>
</androidx.constraintlayout.widget.ConstraintLayout>